cleared spacing issues

--- a/src/components/productDetail/productDetail.css
+++ b/src/components/productDetail/productDetail.css
@@ -3,8 +3,9 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 100%;
   background-color: "#ffebee";
-  margin-top: 2rem;
+  margin-top: 10rem;
 }
 
 .buttons {
